# RoyaleWithCheese

./: .gitignore  AGENTS.md  CONFIGURATION.md  Cargo.toml  README.md  build.rs  config.toml.example  note.md
.cargo/: config.toml
.github/workflows/: config-schema-sync.yml
.sisyphus/evidence/: task-20-full-tests.txt  task-20-mock-e2e.txt  task-20-release-clean.txt
.sisyphus/notepads/zero-from-scratch-redesign/: decisions.md  issues.md  learnings.md
docs/: APPLICATION_LAYER.md  Architecture.md  CLI_CONTRACT.md  DESIGN_PHILOSOPHY.md  DOMAIN_LAYER.md  ERROR_HANDLING.md  GPU_ANALYSIS_REPORT.md  GPU_PHASE4_COMPLETION_REPORT.md  INFRASTRUCTURE_CAPTURE.md  INFRASTRUCTURE_SPOUT.md  INFRASTRUCTURE_WGC.md  LOGGING.md  README.md  RELEASE_BUILD.md  REQUIREMENTS.md  ROADMAP.md  TESTING_STRATEGY.md  VISUAL_DEBUG_GUIDE.md  WGC_GPU_INTEGRATION_REPORT.md  WGC_PHASE1_REPORT.md
schema/: config.json
scripts/: benchmark_gpu_cpu.sh  create-pr.ps1  create-release-tag.ps1  create-work-branch.ps1  prune-local-branches.ps1
src/: lib.rs  logging.rs  main.rs
src/application/: input_detector.rs  metrics.rs  mod.rs  pipeline.rs  recovery.rs  runtime_state.rs  stats.rs  threads.rs
src/domain/: config.rs  error.rs  gpu_ports.rs  mod.rs  ports.rs  types.rs
src/infrastructure/: audio_feedback.rs  color_process.rs  debug_display.rs  gpu_device.rs  hid_comm.rs  input.rs  mock_comm.rs  mock_process.rs  mod.rs  process_selector.rs  sound.rs
src/infrastructure/capture/: common.rs  dda.rs  mod.rs  spout.rs  spout_ffi.rs  wgc.rs
src/infrastructure/processing/: mod.rs  selector.rs
src/infrastructure/processing/cpu/: mod.rs
src/infrastructure/processing/gpu/: adapter.rs  mod.rs  shader.hlsl
src/infrastructure/processing/gpu/shaders/: hsv_detect.hlsl
tests/: gpu_capture_integration.rs  gpu_integration.rs  pipeline_integration.rs
tools/: generate_schema.rs
