[package]
name = "RoyaleWithCheese"
version = "0.1.0"
edition = "2021"
default-run = "RoyaleWithCheese"

[features]
default = []
performance-timing = []  # パフォーマンス測定用のタイミングログを有効化
opencv-debug-display = []  # デバッグ用：OpenCVで画像処理中の画像を表示
# 注: 処理方式の選択（fast-color/yolo-ort）は config.toml の process.mode で実行時に切り替え可能

[dependencies]
# エラー処理
thiserror = "2.0"
anyhow = "1.0"

# ログ・トレーシング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# 設定管理
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
schemars = "1.0"

# スレッド間通信
crossbeam-channel = "0.5"

# 画面キャプチャ (Windows Desktop Duplication API)
win_desktop_duplication = "0.10"

# 画像処理 (OpenCV)
opencv = { version = "0.92", features = ["highgui"] }

# HID通信
hidapi = "2.6"

# JSON (schema生成用)
serde_json = "1.0"

# Windows API (GPU ROI実装用 - win_desktop_duplicationと同じバージョン)
windows = { version = "0.57", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    # WGC (Windows Graphics Capture) 用
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation_Collections",
    "Win32_System_WinRT_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "generate_schema"
path = "tools/generate_schema.rs"

[dev-dependencies]
# テスト用
criterion = "0.5"
